worked on the trending section , would fix the button soon

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 </div>
                 <div class="summer">
                     <div class="collection-h3">
-                        <h3>COLLECTIONS</h3>
+                        <h3>SUMMER OUTFITS</h3>
                     </div>
                     <div class="big-summer">
                         <div class="summerflex1">
@@ -223,11 +223,11 @@
                                 <img class="summer-img1" src="images/image 16.png" alt="">
                                 <div class="tag">
                                     <div class="name-tag">
-                                        <p>Guio Pants</p>
+                                        <p>Sutit Summer dress</p>
                                         <img src="./images/Vector.svg" alt="">
                                     </div>
                                     <div class="price">
-                                        <p>#100,000</p>
+                                        <p>#290,000</p>
                                     </div>
                                 </div>
                         </div> 
@@ -238,11 +238,11 @@
                                     <img class="summer-img2" src="images/Frame 28.png" alt="">
                                     <div class="tag">
                                         <div class="name-tag">
-                                            <p>Guio Pants</p>
+                                            <p>Botyn Shorts</p>
                                             <img src="./images/Vector.svg" alt="">
                                         </div>
                                         <div class="price">
-                                            <p>#100,000</p>
+                                            <p>#290,000</p>
                                         </div>
                                     </div>
                             </div>
@@ -250,11 +250,11 @@
                                 <img class="summer-img2" src="images/Frame 29.png" alt="">
                                 <div class="tag">
                                     <div class="name-tag">
-                                        <p>Guio Pants</p>
+                                        <p>Lunasu Summer Dress</p>
                                         <img src="./images/Vector.svg" alt="">
                                     </div>
                                     <div class="price">
-                                        <p>#100,000</p>
+                                        <p>#290,000</p>
                                     </div>
                                 </div>
                         </div>
@@ -264,7 +264,7 @@
                                     <img class="summer-img2" src="images/image 19.png" alt="">
                                     <div class="tag">
                                         <div class="name-tag">
-                                            <p>Guio Pants</p>
+                                            <p>Hawaiii dress</p>
                                             <img src="./images/Vector.svg" alt="">
                                         </div>
                                         <div class="price">
@@ -301,43 +301,43 @@
                         <div class="trendflex2">
                             <div class="flex1">
                                 <div class="trend-div2">
-                                    <img class="trend-img2" src="images/Frame 28.png" alt="">
+                                    <img class="trend-img2" src="images/Frame 47.png" alt="">
                                     <div class="tag">
                                         <div class="name-tag">
-                                            <p>Guio Pants</p>
+                                            <p>Tluy Fashion Eyeglass</p>
                                             <img src="./images/Vector.svg" alt="">
                                         </div>
                                         <div class="price">
-                                            <p>#100,000</p>
+                                            <p>#8,000</p>
                                         </div>
                                     </div>
                             </div>
                             <div class="trend-div2">
-                                <img class="trend-img2" src="images/Frame 29.png" alt="">
+                                <img class="trend-img2" src="images/image 28 (1).png" alt="">
                                 <div class="tag">
                                     <div class="name-tag">
-                                        <p>Guio Pants</p>
+                                        <p>Buytl Fashion Eyeglass</p>
                                         <img src="./images/Vector.svg" alt="">
                                     </div>
                                     <div class="price">
-                                        <p>#100,000</p>
+                                        <p>#12,000</p>
                                     </div>
                                 </div>
                         </div>
                             </div>
                             <div class="flex2-trend">
                                 <div>
-                                    <button type="button" class="trend-now"> Shop Now<img src="./images/Vector 337.svg" alt=""></button>
+                                    <img class="end-sale" src="images/Group 3.png" alt="">
                                 </div>
                                 <div class="trend-div2">
-                                    <img class="trend-img2" src="images/image 19.png" alt="">
+                                    <img class="trend-img2" src="images/image 33.png" alt="">
                                     <div class="tag">
                                         <div class="name-tag">
-                                            <p>Guio Pants</p>
+                                            <p>Eve Eyewear</p>
                                             <img src="./images/Vector.svg" alt="">
                                         </div>
                                         <div class="price">
-                                            <p>#100,000</p>
+                                            <p>#12,000</p>
                                         </div>
                                     </div>
                             </div>
@@ -347,14 +347,14 @@
                         </div>
                         <div class="trendflex1">
                             <div class="trend-div2">
-                                <img class="trend-img1" src="images/image 16.png" alt="">
+                                <img class="trend-img1" src="images/image 34.png" alt="">
                                 <div class="tag">
                                     <div class="name-tag">
-                                        <p>Guio Pants</p>
+                                        <p>Uranium ginf Eyeglass</p>
                                         <img src="./images/Vector.svg" alt="">
                                     </div>
                                     <div class="price">
-                                        <p>#100,000</p>
+                                        <p>#12,000</p>
                                     </div>
                                 </div>
                         </div> 
@@ -375,4 +375,10 @@
                     </div>
                 </div>
 </body>
+<footer class="deo-footer">
+<div class="big-footer">
+    
+</div>
+
+</footer>
 </html>
