started working on buttons

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
         <li><label for="language"></label>
             <select id="language" name="language">
-              <option value="volvo">EN</option>
-              <option value="saab">FR</option>
-              <option value="fiat">ES</option>
+              <option value="english">EN</option>
+              <option value="french">FR</option>
+              <option value="spanish">ES</option>
             </select></li>
         </ul>
     </nav>
@@ -58,10 +58,7 @@
         </div>
             </div>
             <div class="shop-button">
-                <button type="button" class="shop">
-                    <p>Shop Now</p>
-                    <img  class="arrow" src="./images/Vector 337.svg" alt="">
-                </button>
+                <a href="#" class="button">Shop Now <i class="fa-solid fa-arrow-right-long"></i></a>
             </div>
 
 <div class="list">
@@ -377,8 +374,56 @@
 </body>
 <footer class="deo-footer">
 <div class="big-footer">
-    
-</div>
+    <img class="footer-logo" src="images/Deo-white.png" alt="">
+    <div class="footer-line">
+        <h3  class="footer-h3">Products</h3>
+        <ul class="footer-list">
+            <li><a href="#">Clothing</a></li>
+            <li><a href="#">Footwear</a></li>
+            <li><a href="#">Accessories</a></li>
+        </ul>
+    </div>
 
+    <div class="footer-line">
+        <h3 class="footer-h3">Company</h3>
+        <ul class="footer-list">
+            <li><a href="#">Terms of Use</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Our Partners</a></li>
+        </ul>
+    </div>
+
+    <div class="footer-line">
+        <h3 class="footer-h3">My Account</h3>
+        <ul class="footer-list">
+            <li><a href="#">Login</a></li>
+            <li><a href="#">My Orders</a></li>
+            <li><a href="#">Favourites</a></li>
+            <li><a href="#">Delivery</a></li>
+            <li><a href="#">Payments</a></li>
+        </ul>
+    </div>
+
+
+    <div class="footer-line">
+        <h3 class="footer-h3">Newsletter</h3>
+       <p class="footer-list-p">Stay up to date with our latest news and updates.</p>
+       <input type="email" class="footer-input" placeholder="Enter your email">
+    </div>
+</div>
+<div class="footer-banner">
+    <p class="footer-banner-p" >Copyright ©2024 All rights reserved  <span>DEO</span></p>
+   <div class="small-footerbanner">
+   <a href="#" class="footer-icon"> <i class="fa-brands fa-instagram"></i></a>
+    <a href="#"  class="footer-icon"><i class="fa-brands fa-linkedin-in"></i></a>
+    <a href="#"  class="footer-icon"><i class="fa-brands fa-facebook-f"></i></a>
+   <a href="#"  class="footer-icon"><i class="fa-brands fa-twitter"></i></a>
+
+    <div class="uparrow">
+        <a href="#" class="footer-icon1"> <i class="fa-solid fa-chevron-up"></i></a>
+       
+    </div>
+   </div>
+</div>
 </footer>
 </html>
